syntax = "proto3";
package reportstatus;

option csharp_namespace = "Client.Contracts";

message ReportStatus {
  oneof report_status {
    ReportCompleted report_completed = 1;
    ReportFailed report_failed = 2;
  }
}

message ReportCompleted {
  string report_id = 1;
  double ratio = 2;
  int32 count = 3;
}

message ReportFailed {
  string report_id = 1;
  string reason = 2;
}